# thingsboard-scripts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: bumpversion.yml
cleanup/: delete_telemetries.py
device/: echo_attribute_updates.py
device/rpc_demo/: job.json  mqtts_rpcs.py
export/: get_attribute.py  telemetry.py
