[project]
name = "thingsboard-scripts"
version = "0.1.0"
description = "Scripts to test TB features and export data"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.3",
    "tb-rest-client>=4.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.4.0",
]

# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
[[tool.mypy.overrides]]
module = [
    "tb_rest_client.*"
]
follow_untyped_imports = true
